# Enterprise-AI-Knowledge-Intelligence-Platform-

./: .editorconfig  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pom.xml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build-backend.yml
alembic/: env.py
eakip-agent-orchestrator/: pom.xml
eakip-analytics/: pom.xml
eakip-api/: pom.xml
eakip-core/: pom.xml
eakip-document-processing/: pom.xml
eakip-frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
eakip-frontend/src/: App.tsx  index.css
eakip-frontend/src/layouts/: DashboardLayout.tsx  PublicLayout.tsx
eakip-frontend/src/routes/: ProtectedRoute.tsx  index.tsx
eakip-frontend/src/services/: aiService.ts  api.ts
eakip-frontend/src/store/: index.ts
eakip-rag/: pom.xml
eakip-security/: pom.xml
eakip_agent_orchestrator/: pyproject.toml
eakip_agent_orchestrator/src/eakip_agent_orchestrator/: __init__.py  consensus.py  db_helper.py  executor.py  mcp.py  memory.py  models.py  observability.py  orchestrator.py  planning.py  reasoning.py  reflection.py  runtime.py  tools.py  workflow.py
eakip_analytics/: pyproject.toml
eakip_api/: pyproject.toml
eakip_api/src/eakip_api/: __init__.py  dto.py  logging.py  main.py  mapper.py  messaging.py
eakip_api/src/eakip_api/config/: db.py  exceptions.py  security.py
eakip_api/src/eakip_api/routers/: ai.py  auth.py  books.py  borrowings.py  mcp.py  memory.py  planning.py  rag.py  reports.py  reservations.py  saas.py  tools.py  workflow.py
eakip_api/src/eakip_api/websocket/: handler.py
eakip_core/: pyproject.toml
eakip_core/src/eakip_core/: __init__.py
eakip_core/src/eakip_core/common/: dto.py  saas.py  validation.py
eakip_core/src/eakip_core/domain/: exception.py  models.py  repositories.py
eakip_core/src/eakip_core/usecase/: services.py
eakip_document_processing/: pyproject.toml
eakip_document_processing/src/eakip_document_processing/: __init__.py  chunking.py  parser.py
eakip_rag/: pyproject.toml
eakip_rag/src/eakip_rag/: __init__.py  embedding.py  models.py  repositories.py  vector.py
eakip_security/: pyproject.toml
eakip_security/src/eakip_security/: __init__.py  config.py  dto.py  jwt.py  service.py
scratch/: audit_equivalence.py  check_ci.py  check_ci_jobs.py  check_ci_logs.py  check_latest_commit.py  verify_deep.py
(+235 files in other folders)
