[tool.poetry]
name = "eakip_agent_orchestrator"
version = "1.0.0"
description = "EAKIP Multi-Agent Orchestrator and Tool Runtime Engine"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
