[tool.poetry]
name = "eakip_api"
version = "1.0.0"
description = "EAKIP FastAPI APIRouters entrypoint"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
websockets = "^11.0.0"
pika = "^1.3.0" # RabbitMQ client

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
