[tool.poetry]
name = "eakip_core"
version = "1.0.0"
description = "EAKIP Core Bounded Contexts in Python"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pymongo = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
