[tool.poetry]
name = "eakip_document_processing"
version = "1.0.0"
description = "EAKIP Document Processing and Text Chunking"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
