[tool.poetry]
name = "eakip_security"
version = "1.0.0"
description = "EAKIP Security Infrastructure in Python"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
